S11P12D210-314 Feat: 선생님이름도 녹화 강의에 보이게

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -203,6 +203,10 @@
             android:name="recordedId"
             android:defaultValue="-1L"
             app:argType="long" />
+        <argument
+            android:name="teacher"
+            android:defaultValue=""
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/lectureVideoFragment"
