--- a/app/src/main/res/layout/list_item_live.xml
+++ b/app/src/main/res/layout/list_item_live.xml
@@ -32,7 +32,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/white">
 
             <TextView
                 android:id="@+id/tv_lecture_title"
@@ -42,7 +43,6 @@
                 android:layout_marginHorizontal="@dimen/padding_medium"
                 android:layout_marginTop="@dimen/padding_medium"
                 android:maxLength="50"
-                app:layout_constraintEnd_toStartOf="@id/tv_editBtn"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="초보자도 쉽게 배우는 요가초보자도 쉽게 배우는 " />
@@ -58,36 +58,23 @@
                 tools:text="월, 목 | 19:00~20:00" />
 
             <TextView
-                android:id="@+id/tv_editBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/padding_small"
-                android:background="@android:color/transparent"
-                android:paddingStart="@dimen/padding_medium"
-                android:paddingBottom="@dimen/padding_medium"
-                android:text="@string/edit"
-                style="@style/BoldSmallText"
-                app:layout_constraintEnd_toStartOf="@id/tv_deleteBtn"
-                app:layout_constraintTop_toTopOf="@id/tv_lecture_title" />
-
-            <TextView
                 android:id="@+id/tv_deleteBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/padding_small"
                 android:background="@android:color/transparent"
-                android:paddingEnd="@dimen/padding_medium"
-                android:paddingBottom="@dimen/padding_medium"
+                android:paddingHorizontal="@dimen/padding_medium"
+                android:paddingVertical="@dimen/padding_small"
                 android:text="@string/delete"
-                style="@style/BoldSmallText"
+                android:textSize="@dimen/text_medium"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_lecture_time"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tv_editBtn" />
+                app:layout_constraintTop_toTopOf="@+id/tv_lecture_title" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/v_enterBtn"
                 android:layout_width="0dp"
                 android:layout_height="36dp"
-                android:background="@color/primary"
+                android:background="@color/surface_container"
                 android:text="@string/enter"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
