S11P12D210-319 Feat: modify Dialog 뷰 구현

--- a/app/src/main/res/layout/dialog_modify.xml
+++ b/app/src/main/res/layout/dialog_modify.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusableInTouchMode="true"
@@ -15,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="비밀번호를 입력하세요"
+        android:text="@string/password_info"
         app:layout_constraintBottom_toTopOf="@id/til_pw"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +25,11 @@
         android:id="@+id/til_pw"
         style="@style/boxCornerRadiusStyle"
         app:errorEnabled="true"
+        android:layout_height="wrap_content"
         android:layout_marginVertical="@dimen/padding_medium"
+        app:errorTextColor="@color/black"
+        app:boxStrokeErrorColor="@color/primary"
+        app:errorIconTint="@color/primary"
         app:layout_constraintBottom_toTopOf="@id/btn_go_modify"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
