--- a/app/src/main/res/layout/dialog_modify.xml
+++ b/app/src/main/res/layout/dialog_modify.xml
@@ -2,17 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:focusableInTouchMode="true"
-    android:focusable="true">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv_inst"
         style="@style/LargeText"
-        android:layout_marginTop="@dimen/bottom_button_padding"
-        android:layout_marginBottom="@dimen/dialog_padding_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/bottom_button_padding"
+        android:layout_marginBottom="@dimen/dialog_padding_medium"
         android:gravity="center"
         android:text="@string/password_info"
         app:layout_constraintBottom_toTopOf="@id/til_pw"
@@ -24,34 +22,34 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_pw"
         style="@style/boxCornerRadiusStyle"
-        app:errorEnabled="true"
         android:layout_height="wrap_content"
         android:layout_marginVertical="@dimen/padding_medium"
-        app:errorTextColor="@color/black"
         app:boxStrokeErrorColor="@color/primary"
+        app:errorEnabled="true"
         app:errorIconTint="@color/primary"
+        app:errorTextColor="@color/black"
         app:layout_constraintBottom_toTopOf="@id/btn_go_modify"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_inst">
+        app:layout_constraintTop_toBottomOf="@id/tv_inst"
+        app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tie_pw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:lines="1"
-            android:focusable="true"
-            android:focusableInTouchMode="true"/>
+            android:maxLength="40" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btn_go_modify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dialog_padding_medium"
         android:text="확인"
         android:textColor="@color/black"
-        android:layout_marginBottom="@dimen/dialog_padding_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
