S11P12D210-327 강의 상세 - 상단 사진 padding 없이 예쁘게 나오게 바꾸기

--- a/app/src/main/res/layout/list_item_lecture_header.xml
+++ b/app/src/main/res/layout/list_item_lecture_header.xml
@@ -3,15 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/padding_medium">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_lecture_picture"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/gray"
+        android:background="@color/gray_10"
         app:layout_constraintBottom_toTopOf="@id/title"
         app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintEnd_toEndOf="parent"
