S11P12D210-340 Feat: 이미지 비율로 자르지 않고 원본으로 보기

--- a/app/src/main/res/layout/list_item_lecture.xml
+++ b/app/src/main/res/layout/list_item_lecture.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/padding_medium"
         android:background="@color/gray_20"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/dv"
         app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintEnd_toStartOf="@id/tv_video_title"
