--- a/app/src/main/res/layout/list_item_lecture_header.xml
+++ b/app/src/main/res/layout/list_item_lecture_header.xml
@@ -7,12 +7,12 @@
 
     <ImageView
         android:id="@+id/iv_lecture_picture"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:src="@drawable/gray"
         android:scaleType="fitCenter"
-        android:background="@color/gray_10"
         app:layout_constraintBottom_toTopOf="@id/title"
-        app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
