--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -19,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <!-- 시간 -->
             <TextView
                 android:id="@+id/tv_time"
                 style="@style/BoldLargeText"
@@ -70,7 +69,6 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_time"
                 app:layout_constraintTop_toTopOf="@id/btn_start_time" />
 
-            <!-- 요일 선택 -->
             <TextView
                 android:id="@+id/tv_select_day"
                 style="@style/BoldLargeText"
@@ -155,7 +153,6 @@
                 app:layout_constraintStart_toEndOf="@id/ibtn_sat"
                 app:layout_constraintTop_toTopOf="@id/ibtn_mon" />
 
-            <!-- 기간 선택 -->
             <TextView
                 android:id="@+id/tv_select_term"
                 style="@style/BoldLargeText"
@@ -252,7 +249,6 @@
 
             </RadioGroup>
 
-            <!-- 수업 방식 -->
             <TextView
                 android:id="@+id/tv_select_class_method"
                 style="@style/BoldLargeText"
@@ -304,7 +300,6 @@
                     android:id="@+id/rb_one_to_multi"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="1dp"
                     android:layout_weight="2"
                     android:background="@drawable/selector_radio_button"
                     android:button="@null"
@@ -312,8 +307,23 @@
                     android:text="@string/one_to_multiple"
                     android:textSize="@dimen/text_medium_large"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/rb_total_method"
                     app:layout_constraintStart_toEndOf="@id/rb_one_to_one"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <RadioButton
+                    android:id="@+id/rb_total_method"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:background="@drawable/selector_radio_button"
+                    android:button="@null"
+                    android:gravity="center"
+                    android:text="@string/total"
+                    android:textSize="@dimen/text_medium_large"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/rb_one_to_multi"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Space
