S11P12D210-376 Feat: 일대다 막기 및 뷰 정리

--- a/app/src/main/res/layout/fragment_register_live.xml
+++ b/app/src/main/res/layout/fragment_register_live.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -142,11 +141,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding_extra_extra_large"
+            android:clickable="true"
             app:helperText="YYYY.MM.DD"
             app:layout_constraintBottom_toTopOf="@id/til_end"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:clickable="true"
             app:layout_constraintTop_toBottomOf="@id/tv_choose_date">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -193,10 +192,10 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/padding_small"
             android:text="@string/end_unlimit"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_time"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/til_end"
-            app:layout_constraintBottom_toTopOf="@id/tv_time"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/til_end" />
 
         <TextView
             android:id="@+id/tv_time"
@@ -217,9 +216,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/padding_extra_extra_large"
+            android:layout_marginBottom="@dimen/padding_extra_extra_large"
             android:text="@string/init_time"
             android:textColor="@color/black"
-            app:layout_constraintBottom_toTopOf="@id/tv_max_num"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_tilde"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_time" />
@@ -242,38 +242,10 @@
             android:layout_marginEnd="@dimen/padding_extra_extra_large"
             android:text="@string/init_time"
             android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/btn_start"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_tilde"
             app:layout_constraintTop_toTopOf="@id/btn_start" />
-
-        <TextView
-            android:id="@+id/tv_max_num"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/padding_large"
-            android:paddingBottom="@dimen/padding_medium"
-            android:text="@string/max_num"
-            android:textSize="@dimen/text_medium_large"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/sp_max_num"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_start" />
-
-        <Spinner
-            android:id="@+id/sp_max_num"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/padding_extra_extra_large"
-            android:dropDownWidth="match_parent"
-            android:entries="@array/maxnum_array"
-            android:paddingHorizontal="@dimen/padding_small"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_max_num" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
