--- a/app/src/main/res/layout/fragment_teacher_reservation.xml
+++ b/app/src/main/res/layout/fragment_teacher_reservation.xml
@@ -56,66 +56,6 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/tv_select_class_method"
-            style="@style/BoldSemiMediumText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/padding_extra_large"
-            android:gravity="center"
-            android:text="@string/class_method"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_profile"
-            tools:layout_editor_absoluteX="0dp" />
-
-        <RadioGroup
-            android:id="@+id/rg_class"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/padding_small"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_select_class_method"
-            tools:layout_editor_absoluteX="0dp">
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <RadioButton
-                android:id="@+id/rb_one_to_one"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/padding_medium"
-                android:layout_marginBottom="1dp"
-                android:layout_weight="2"
-                android:background="@drawable/custom_radio_selector"
-                android:button="@android:color/transparent"
-                android:gravity="center"
-                android:text="@string/one_to_one"
-                android:textSize="16sp" />
-
-            <RadioButton
-                android:id="@+id/rb_one_to_multi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:background="@drawable/custom_radio_selector"
-                android:button="@android:color/transparent"
-                android:gravity="center"
-                android:text="@string/one_to_multiple"
-                android:textSize="16sp" />
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-        </RadioGroup>
-
-        <TextView
             android:id="@+id/tv_available_class"
             style="@style/BoldSemiMediumText"
             android:layout_width="match_parent"
@@ -125,7 +65,7 @@
             android:text="@string/available_class"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rg_class"
+            app:layout_constraintTop_toBottomOf="@id/iv_profile"
             tools:layout_editor_absoluteX="0dp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -168,6 +108,7 @@
             style="@style/BoldSemiMediumText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_extra_large"
             android:gravity="center"
             android:text="@string/select_term"
             app:layout_constraintEnd_toEndOf="parent"
