--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="light_green">#F8FEFA</color>
     <color name="bottomnav">#fef0f7</color>
     <color name="clearWhite">#80FFFFFF</color>
-    <color name="green">#00FF00</color>
+    <color name="green">#009900</color>
 </resources>
