S11P12D210-383 Feat: 녹화 강의 사전 다운로드 + 미리 추론

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -220,7 +220,7 @@
         android:label="fragment_lecture_video"
         tools:layout="@layout/fragment_lecture_video">
         <argument
-            android:name="uriList"
+            android:name="urlArray"
             app:argType="string[]" />
     </fragment>
     <fragment
