S11P12D210-349 Feat: 녹화강의 시작 전 준비시간 5초

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -39,5 +39,7 @@
     <dimen name="text_medium_large">18sp</dimen>
     <dimen name="text_medium_large20">20sp</dimen>
     <dimen name="text_large">24sp</dimen>
+    <dimen name="text_extra_large30">30sp</dimen>
     <dimen name="text_extra_large">36sp</dimen>
+    <dimen name="text_extra_large150">150sp</dimen>
 </resources>
